Fixed spacing of info container

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ p{
 	display: block;
 	padding: 20px;
 	margin-top: 20px;
+	margin-bottom: 20px;
 	margin-left: auto;
 	margin-right: auto;
 	width: 50%;
